tests/paczka1/fuzzy1/87851103.err
Error in line 1: PjqdqP S643 59,0
Error in line 9: dDd84 S447 50,4
Error in line 13: xoKzP S447 19,1
Error in line 18: xoKzP A843 2,9
Error in line 3: PjqdqP A553 80,7
Error in line 23: PjqdqP S447 55,2
Error in line 31: iZCidHWEGV S643 46,6
Error in line 34: XxqbTY8W A553 90,5
Error in line 35: IZ0omJoWy A843 42,3
